Add auth: Controller, Service, DTOs

--- a/AuthService.Application/AuthService.Application.csproj
+++ b/AuthService.Application/AuthService.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AuthService.Domain\AuthService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
