--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=""
+  },
+  "ApllicationSettings": {
+    "JWT_Secret": "9bdKUx80oFsKgTt93lmogKhApeIdwhE1ELpKvje8RO0=",
+    "Issuer": null,
+    "Audience": null,
+    "ExpireMinutes": 15
+  },
   "AllowedHosts": "*"
 }
