--- a/AuthService.API/appsettings.json
+++ b/AuthService.API/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=""
+    "DefaultConnectionString": "Data Source="
   },
   "ApllicationSettings": {
     "JWT_Secret": "9bdKUx80oFsKgTt93lmogKhApeIdwhE1ELpKvje8RO0=",
-    "Issuer": null,
-    "Audience": null,
+    "Issuer": "auth-service",
+    "Audience": "client-app",
     "ExpireMinutes": 15
   },
   "AllowedHosts": "*"
