--- a/AuthService.API/appsettings.json
+++ b/AuthService.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source="
+    "DefaultConnection": "Host=postgres;Port=5432;Database=authdb;Username=postgres;Password=123456"
   },
   "ApllicationSettings": {
     "JWT_Secret": "9bdKUx80oFsKgTt93lmogKhApeIdwhE1ELpKvje8RO0=",
